# nixos-configuration

./: .build.yml  .envrc  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  cachix.nix  configuration.nix  flake.nix  fonts.nix  networking.nix  programs.nix  pyproject.toml  secrets.tar.enc  secrets_file_manager.sh  shell.nix  tmpfs.nix
archives/: README  initialize-droplet.py  nixos-infect
cachix/: colmena.nix  default.nix  sumnerevans.nix
hardware-configuration/: bluetooth.nix  default.nix  tmpfs.nix  v4l2loopback.nix
hardware-configuration-modules/: power-management.nix
hardware-configurations/: jedha.nix  mustafar.nix
host-configurations/: automattic.nix  bespin.nix  coruscant.nix  jedha.nix  kessel.nix  matrixbotworkshop.com.nix  morak.nix  mustafar.nix  nevarro.nix  praesitlyn.nix  scarif.nix  tatooine.nix
modules/: beeper.nix  default.nix  nix.nix  time.nix
nixos/: colmena.nix
notes/: transition-nevarro-kessel.md
pkgs/: 0001-add-super-verbose-logs.patch  csmdirsearch.nix  heisenbridge.nix  linkedin-matrix.nix  linkedin-messaging.nix  mailnotify.nix  maubot.nix  mautrix-discord.nix  mautrix-slack.nix  mautrix.nix  msclinkbot.nix  offlinemsmtp.nix  pr-tracker.nix  python-csmdirsearch.nix  python-gitlab.nix  sublime-music.nix  sway-accel-rotate.nix  tracktime.nix
programs/: browsers.nix  default.nix  direnv.nix  obs.nix  offlinemsmtp.nix  tmux.nix  zsh.nix
secrets/: beeper-localenv-root-ca.pem  bespin-longview-api-key  coruscant-ip  coturn-static-auth-secret  isso-admin-password  isso-comments-smtp-password  xandikos  (+19 more)
(+236 files in other folders)
