[tool.poetry]
name = "nixos-configuration"
version = "0.1.0"
description = "Configuration for NixOS computers"
authors = ["Sumner Evans <me@sumnerevans.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
